# mBikePredictions

./: .gitignore  Dockerfile  data.dvc  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: deploy-client-script.yml  deploy-service-script.yml  evaluate-predictions-script.yml  fetch-data-script.yml  python-test-app.yml  run-tests-script.yml  train-eval-models-script.yml
data/merged/: station10_data.csv  station11_data.csv  station12_data.csv  station13_data.csv  station14_data.csv  station15_data.csv  station16_data.csv  station17_data.csv  station18_data.csv  station19_data.csv  station1_data.csv  station20_data.csv  station21_data.csv  station22_data.csv  station23_data.csv  station24_data.csv  station25_data.csv  station26_data.csv  station27_data.csv  station28_data.csv  station29_data.csv  station2_data.csv  station3_data.csv  station4_data.csv  station5_data.csv  station6_data.csv  station7_data.csv  station8_data.csv  station9_data.csv
data/processed/: Betnavska_c_83_data.csv  C_PROLETARSKIH_BRIGAD_71_data.csv  Cesta_XIV_divizije_data.csv  Glavni_trg_20_data.csv  Gorkega_ulica_32_data.csv  Gorkega_ulica_48_data.csv  Gosposvetska_cesta_20_data.csv  Gosposvetska_cesta_4_data.csv  Gosposvetska_cesta_69_data.csv  Kardeljeva_c_55_data.csv  Koroška_cesta_173_data.csv  Koroška_cesta_74_data.csv  LJUBLJANSKA_41_data.csv  Ljubljanska_ul_30-25_data.csv  (+68 more)
gx/: great_expectations.yml  run_mBikeCheckpoint.py
models/: prediction_model.h5  standard_scaler.pkl
reports/: metrics.txt  train_metrics.txt
tests/: test_api.py  test_station_api.py  test_weather_api.py
(+181 files in other folders)
