[tool.poetry]
name = "mbikeprediction"
version = "0.1.0"
description = ""
authors = ["Patrik Praprotnik <praprotnik.patrik@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
tensorflow-io-gcs-filesystem = "^0.31.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
tensorflow = "2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
